--- a/src/main/resources/com/example/demo4/friend.fxml
+++ b/src/main/resources/com/example/demo4/friend.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.Friend_Request">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="openchat" layoutY="-3.0" mnemonicParsing="false" onMouseClicked="#openchat" opacity="0.0" prefHeight="57.0" prefWidth="300.0" />
       <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="7.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
@@ -16,7 +15,7 @@
             <Image url="@png/profile.png" />
          </image>
       </ImageView>
-      <Label layoutX="37.0" layoutY="17.0" text="username">
+      <Label fx:id="username" layoutX="46.0" layoutY="16.0" text="username">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
