--- a/src/main/resources/com/example/demo4/friendconversation.fxml
+++ b/src/main/resources/com/example/demo4/friendconversation.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <AnchorPane prefHeight="95.0" prefWidth="500.0" BorderPane.alignment="CENTER">
@@ -40,12 +39,12 @@
    <bottom>
       <AnchorPane prefHeight="68.0" prefWidth="560.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="83.0" fitWidth="500.0" layoutX="2.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="89.0" fitWidth="500.0" layoutX="2.0" layoutY="-19.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@png/screen%203.png" />
                </image>
             </ImageView>
-            <TextArea fx:id="messegetextarea" layoutX="63.0" layoutY="16.0" onMouseClicked="#sendmessege" prefHeight="49.0" prefWidth="302.0" />
+            <TextArea fx:id="messegetextarea" layoutX="81.0" onMouseClicked="#sendmessege" prefHeight="49.0" prefWidth="302.0" />
          </children>
       </AnchorPane>
    </bottom>
