--- a/src/main/resources/com/example/demo4/friend.fxml
+++ b/src/main/resources/com/example/demo4/friend.fxml
@@ -9,13 +9,13 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="155.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.friendcontroller">
    <children>
-      <Button fx:id="openchat" layoutY="-3.0" mnemonicParsing="false" onMouseClicked="#openchat" opacity="0.0" prefHeight="58.0" prefWidth="152.0" />
+      <Button fx:id="openchat" layoutX="14.0" layoutY="8.0" mnemonicParsing="false" onMouseClicked="#openchat" opacity="0.0" prefHeight="30.0" prefWidth="126.0" />
       <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="7.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@png/profile.png" />
          </image>
       </ImageView>
-      <Label fx:id="username" layoutX="46.0" layoutY="16.0" prefHeight="20.0" prefWidth="93.0" text="username">
+      <Label fx:id="username" layoutX="46.0" layoutY="15.0" prefHeight="20.0" prefWidth="93.0" text="username">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
