--- a/src/main/resources/com/example/demo4/friendconversation.fxml
+++ b/src/main/resources/com/example/demo4/friendconversation.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,42 +11,49 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="462.0" prefWidth="365.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.conversationcontroller">
    <top>
-      <AnchorPane prefHeight="95.0" prefWidth="500.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="67.0" prefWidth="467.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="username" layoutX="67.0" layoutY="25.0" text="username">
+            <Label fx:id="friendname" layoutX="90.0" layoutY="18.0" text="null">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <ImageView fitHeight="50.0" fitWidth="50.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="20.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@png/profile.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="49.0" fitWidth="142.0" layoutX="378.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="49.0" fitWidth="112.0" layoutX="247.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@png/Screenshot%202.png" />
+                  <Image url="@png/Screenshot 2.png" />
                </image>
             </ImageView>
-            <Button layoutX="468.0" layoutY="26.0" mnemonicParsing="false" opacity="0.0" prefHeight="17.0" prefWidth="19.0" />
          </children>
       </AnchorPane>
    </top>
-   <center>
-      <VBox fx:id="messegedarea" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
-   </center>
    <bottom>
-      <AnchorPane prefHeight="68.0" prefWidth="560.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="68.0" prefWidth="462.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="89.0" fitWidth="500.0" layoutX="2.0" layoutY="-19.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="64.0" fitWidth="372.0" layoutX="2.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@png/screen%203.png" />
+                  <Image url="@png/screen 3.png" />
                </image>
             </ImageView>
-            <TextArea fx:id="messegetextarea" layoutX="81.0" onMouseClicked="#sendmessege" prefHeight="49.0" prefWidth="302.0" />
+            <TextArea fx:id="messegetextarea" layoutX="68.0" layoutY="10.0" prefHeight="39.0" prefWidth="204.0" />
+            <Button layoutX="336.0" layoutY="21.0" mnemonicParsing="false" onMouseClicked="#sendmessage" opacity="0.0" prefHeight="17.0" prefWidth="19.0" />
          </children>
       </AnchorPane>
    </bottom>
+   <center>
+      <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <content>
+            <VBox fx:id="massagevbox" prefWidth="363.0">
+               <children>
+                  <Label fx:id="messagelable" text="Messages" />
+               </children></VBox>
+         </content>
+      </ScrollPane>
+   </center>
 </BorderPane>
