--- a/src/main/resources/com/example/demo4/Login_css.fxml
+++ b/src/main/resources/com/example/demo4/Login_css.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -17,7 +18,8 @@
             <ImageView fitHeight="52.0" fitWidth="58.0" layoutX="8.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@png/facebook.png" />
-               </image></ImageView>
+               </image>
+            </ImageView>
             <Text fill="#f9fff7" fontSmoothingType="LCD" layoutX="69.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Facebook">
                <font>
                   <Font name="System Bold" size="24.0" />
@@ -25,7 +27,7 @@
             </Text>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="10.0" layoutY="10.0" onMouseClicked="#CreateAccount" prefHeight="541.0" prefWidth="600.0">
+      <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="541.0" prefWidth="600.0">
          <children>
             <Text layoutX="124.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email :" wrappingWidth="52.0">
                <font>
@@ -50,12 +52,20 @@
             <Button fx:id="CreatenewAccount" layoutX="258.0" layoutY="265.0" mnemonicParsing="false" onMouseClicked="#CreateAccount" prefHeight="35.0" prefWidth="165.0" style="-fx-background-color: #3ffc00;" text="Create new Account" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
-               </font></Button>
+               </font>
+            </Button>
             <Button fx:id="login" layoutX="259.0" layoutY="164.0" mnemonicParsing="false" onMouseClicked="#login_cheak" prefHeight="24.0" prefWidth="85.0" style="-fx-background-color: #3936ff;" text="Login" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
-               </font></Button>
-            <Text fill="RED" layoutX="258.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You don't have account? " wrappingWidth="165.60000000000014" />
+               </font>
+            </Button>
+            <Text fill="RED" layoutX="258.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You don't have an account?" wrappingWidth="165.60000000000014" />
+            <!-- Label for Login Messages -->
+            <Label fx:id="loginMessage" layoutX="259.0" layoutY="200.0" text="" textFill="RED" visible="false">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="204.0" prefWidth="600.0" />
