--- a/src/main/resources/com/example/demo4/creatingaccount_css.fxml
+++ b/src/main/resources/com/example/demo4/creatingaccount_css.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
@@ -90,6 +91,7 @@
                </font>
             </Text>
             <Button layoutX="568.0" layoutY="413.0" mnemonicParsing="false" onMouseClicked="#editaccount" text="Edit account" textFill="#21250d" />
+            <Label fx:id="messageLabel" layoutX="270.0" layoutY="460.0" textFill="red" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="204.0" prefWidth="600.0" />
